<resources>
    <string name="app_name">ESP SmartCar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Connect on startup?</string>
    <string name="pref_description_social_recommendations">Should the application try to locate the car at startup
    </string>

    <string name="pref_title_password">Password</string>
    <string name="pref_default_password">DefPass</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_wireless">Wireless Network Details</string>

    <string name="pref_title_wireless">Wireless networks</string>
    <string-array name="pref_wireless_titles">
        <item>ff tit</item>
        <item>minutes tit</item>
    </string-array>
    <string-array name="pref_wireless_values">
        <item>ff</item>
        <item>minutes</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="Control">Control</string>

    <string name="title_activity_car_settings">Settings</string>
    <string name="default_ip_address">10.0.0.217</string>
    <string name="upLeftBtnText">Upleft</string>
    <string name="upBtnText">Up</string>
    <string name="upRightBtnText">upRight</string>
    <string name="leftBtnText">Left</string>
    <string name="stopBtnText">Stop</string>
    <string name="rightBtnText">Right</string>
    <string name="downLeftBtnText">DownLeft</string>
    <string name="downBtnText">Down</string>
    <string name="downRightBtnText">DownRight</string>
    <string name="textViewText">Car Control Main</string>
</resources>
