<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:id="@+id/linearLayout">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/upLeftBtnText"
        android:id="@+id/upLeftBtn"
        android:background="@android:color/holo_purple"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/upBtn"
        android:text="@string/upBtnText" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/upRightBtnText"
        android:id="@+id/upRightBtn"
        android:background="@android:color/holo_purple"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/leftBtn"
        android:text="@string/leftBtnText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_dark"
        android:id="@+id/stopBtn"
        android:text="@string/stopBtnText" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/rightBtn"
        android:text="@string/rightBtnText" />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/downLeftBtnText"
        android:id="@+id/downRightBtn"
        android:background="@android:color/holo_purple"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:id="@+id/downBtn"
        android:text="@string/downBtnText"
        android:background="@android:color/holo_blue_light"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:text="@string/downRightBtnText"
        android:id="@+id/downLeftBtn"
        android:background="@android:color/holo_purple"/>
</LinearLayout>
</LinearLayout>
